Fix blurry text in the first slider

--- a/src/app/homepage/slides/slides.component.sass
+++ b/src/app/homepage/slides/slides.component.sass
@@ -11,12 +11,10 @@
 	top: 0
 	left: 0
 	background: rgba(0,0,0,0.7)
+	display: flex
+	justify-content: center
+	align-items: center
 
-#contents
-	position: absolute
-	top: 50%
-	left: 50%
-	transform: translate(-50%, -50%)
 
 #last-section
 	padding-bottom: 0
